--- a/print.ipynb
+++ b/print.ipynb
@@ -99,8 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7501779e-b63c-473d-9683-fc8e3c98b20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yay! I made a repo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Yay! I made a repo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18795e82-b3c3-482e-9fe3-2b3dd1902271",
    "metadata": {},
    "outputs": [],
    "source": []
